--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
  <div class="loaderArea">
 	   <div class="loader"></div>
 	   <div class="loader"></div>
-	</div>
+</div>
 	<div class="page__line page__line--header" id="navbar">
 		<div class="page__cell">
 			<header class="header">
@@ -304,7 +304,7 @@
 							<div class="inner">
 							<p class="item-heading">About Bennet</p>
 							<div class="personal-info">
-								<p class="text">Anna is woman. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis qui earum a, at placeat iure veniam inventore similique cumque molestiae animi, necessitatibus laboriosam ipsa rerum in autem vero vitae doloremque natus sint, neque. Repellat, quasi neque? Eaque, enim animi quibusdam nobis, voluptates vero placeat tenetur, assumenda quam ullam accusantium suscipit!</p>
+								<p class="text">Anna is a woman. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis qui earum a, at placeat iure veniam inventore similique cumque molestiae animi, necessitatibus laboriosam ipsa rerum in autem vero vitae doloremque natus sint, neque. Repellat, quasi neque? Eaque, enim animi quibusdam nobis, voluptates vero placeat tenetur, assumenda quam ullam accusantium suscipit!</p>
 								<span class="svg-icon icon-link">
 									<svg>
 										<use xlink:href="#link"></use>
